feat: change env example

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,40 @@
-APP_NAME=Laravel
+APP_NAME="Toko Bunga" #ini nama aplikasi atau toko kamu
+APP_MAPS="Indonesia" #ini maps untuk redirect user, contoh: "Monas Jakarta"
+MAPS_LATITUDE="" #ini diisi latitude koordinat toko kamu
+MAPS_LONGITUDE="" #ini diisi longitude koordinat toko kamu
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# --- CONFIG DIBAWAH INI JANGAN DIUBAH
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
+APP_TIMEZONE=Asia/Jakarta
 APP_URL=http://localhost
 
 APP_LOCALE=en
